force-app/main/default/objects/SAP_Staging_History__c/SAP_Staging_History__c.object-meta.xml
<CustomObject>
    <label>SAP Staging History</label>
    <nameField>
        <displayFormat>SAPStagingH- {0000000}</displayFormat>
        <label>SAP Staging History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Staging History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>