force-app/main/default/objects/SAP_Staging_History__c/fields/CondType__c.field-meta.xml
<CustomField>
    <fullName>CondType__c</fullName>
    <label>CondType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>