force-app/main/default/objects/SAP_Staging_History__c/fields/ContStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContStartDate__c</fullName>
    <label>ContStartDate</label>
    <type>Date</type>
</CustomField>