force-app/main/default/objects/SAP_Staging_History__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <length>15</length>
    <type>Text</type>
</CustomField>