force-app/main/default/objects/SAP_Staging_History__c/fields/CreationInd__c.field-meta.xml
<CustomField>
    <fullName>CreationInd__c</fullName>
    <label>CreationInd</label>
    <length>1</length>
    <type>Text</type>
</CustomField>