force-app/main/default/objects/SAP_Staging_History__c/fields/CurrencyKey__c.field-meta.xml
<CustomField>
    <fullName>CurrencyKey__c</fullName>
    <label>CurrencyKey</label>
    <length>3</length>
    <type>Text</type>
</CustomField>