force-app/main/default/objects/SAP_Staging_History__c/fields/Error_Processing_to_GSAP__c.field-meta.xml
<CustomField>
    <fullName>Error_Processing_to_GSAP__c</fullName>
    <label>Error Processing to GSAP</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>