force-app/main/default/objects/SAP_Staging_History__c/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>