force-app/main/default/objects/SAP_Staging_History__c/fields/MrcItemNo__c.field-meta.xml
<CustomField>
    <fullName>MrcItemNo__c</fullName>
    <description>320938943-102095 format....</description>
    <label>MrcItemNo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>