force-app/main/default/objects/SAP_Staging_History__c/fields/OLF_Response__c.field-meta.xml
<CustomField>
    <fullName>OLF_Response__c</fullName>
    <label>OLF Response</label>
    <type>TextArea</type>
</CustomField>