force-app/main/default/objects/SAP_Staging_History__c/fields/Processing_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Processing_Indicator__c</fullName>
    <label>Processing Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Processed</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>