force-app/main/default/objects/SAP_Staging_History__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>