force-app/main/default/objects/SAP_Staging_History__c/fields/Record_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_Date__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(Deal_Created_Date__c)))+&apos;&apos;+ 
CASE(MONTH(DATEVALUE(Deal_Created_Date__c)),1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(MONTH(DATEVALUE(Deal_Created_Date__c))))+&apos;&apos;+
CASE(DAY(DATEVALUE(Deal_Created_Date__c)),1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(DAY(DATEVALUE(Deal_Created_Date__c))))</formula>
    <label>Record Created Date</label>
    <type>Text</type>
</CustomField>