force-app/main/default/objects/SAP_Staging_History__c/fields/Record_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_Time__c</fullName>
    <formula>CASE(HOUR(TIMEVALUE(Deal_Created_Date__c)),0,&quot;00&quot;,1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(HOUR(TIMEVALUE(Deal_Created_Date__c))))+&apos;&apos;+
CASE(MINUTE(TIMEVALUE(Deal_Created_Date__c)),0,&quot;00&quot;,1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(MINUTE(TIMEVALUE(Deal_Created_Date__c))))+&apos;&apos;+
CASE(SECOND(TIMEVALUE(Deal_Created_Date__c)),0,&quot;00&quot;,1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(SECOND(TIMEVALUE(Deal_Created_Date__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Created Time</label>
    <type>Text</type>
</CustomField>