force-app/main/default/objects/SAP_Staging_History__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z4</fullName>
            </value>
            <value>
                <fullName>Z5</fullName>
            </value>
            <value>
                <fullName>Z6</fullName>
            </value>
            <value>
                <fullName>Z9</fullName>
            </value>
            <value>
                <fullName>ZB</fullName>
            </value>
            <value>
                <fullName>ZD</fullName>
            </value>
            <value>
                <fullName>ZE</fullName>
            </value>
            <value>
                <fullName>ZF</fullName>
            </value>
            <value>
                <fullName>ZG</fullName>
            </value>
            <value>
                <fullName>ZH</fullName>
            </value>
            <value>
                <fullName>ZI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>