force-app/main/default/objects/SAP_Staging_History__c/fields/Rv_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>Rv_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastModifiedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAP_Staging_History</relationshipName>
    <type>Lookup</type>
</CustomField>