force-app/main/default/objects/SAP_Staging_History__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>SalesOrg</label>
    <length>10</length>
    <type>Text</type>
</CustomField>