force-app/main/default/objects/SAP_Staging_History__c/fields/SAP_Staging_Parent__c.field-meta.xml
<CustomField>
    <fullName>SAP_Staging_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Staging Parent</label>
    <referenceTo>SAP_Staging__c</referenceTo>
    <relationshipLabel>SAP Staging History</relationshipLabel>
    <relationshipName>SAP_Staging_HistoryParent</relationshipName>
    <type>Lookup</type>
</CustomField>