force-app/main/default/objects/SAP_Staging_History__c/fields/SapMrcNo__c.field-meta.xml
<CustomField>
    <fullName>SapMrcNo__c</fullName>
    <label>SapMrcNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>