force-app/main/default/objects/SAP_Staging_History__c/fields/SapSalesContNo__c.field-meta.xml
<CustomField>
    <fullName>SapSalesContNo__c</fullName>
    <label>SapSalesContNo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>