force-app/main/default/objects/SAP_Staging_History__c/fields/SendEmailNoGSAPResponse__c.field-meta.xml
<CustomField>
    <fullName>SendEmailNoGSAPResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmailNoGSAPResponse</label>
    <type>Checkbox</type>
</CustomField>