force-app/main/default/objects/SAP_Staging_History__c/fields/Sent_to_GSAP__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_GSAP__c</fullName>
    <label>Sent to GSAP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>