force-app/main/default/objects/SAP_Staging_History__c/fields/Sent_to_OLF__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_OLF__c</fullName>
    <label>Sent to OLF?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>