force-app/main/default/objects/SAP_Staging_History__c/fields/SfItemShtNo__c.field-meta.xml
<CustomField>
    <fullName>SfItemShtNo__c</fullName>
    <label>SfItemShtNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>