force-app/main/default/objects/SAP_Staging_History__c/fields/SHTId__c.field-meta.xml
<CustomField>
    <fullName>SHTId__c</fullName>
    <label>SHTId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>