force-app/main/default/objects/SAP_Staging_History__c/fields/StatusInd__c.field-meta.xml
<CustomField>
    <fullName>StatusInd__c</fullName>
    <label>StatusInd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>