force-app/main/default/objects/SAP_Staging_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SfHeaderShtNo__c</columns>
    <columns>MrcItemNo__c</columns>
    <columns>SapMrcNo__c</columns>
    <columns>SapSalesContNo__c</columns>
    <columns>SfItemShtNo__c</columns>
    <columns>Counter__c</columns>
    <columns>Count__c</columns>
    <columns>Processing_Indicator__c</columns>
    <columns>Error_Processing_to_GSAP__c</columns>
    <columns>Rejection_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CreationInd__c</columns>
    <columns>Quantity__c</columns>
    <columns>Record_Created_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>